--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development nodemon ./server/server.js & webpack-dev-server --open"
+    "dev": "cross-env NODE_ENV=development concurrently \" nodemon ./server/server.js\" \"webpack-dev-server --open\""
   },
   "nodemonConfig": {
     "ignore": [
@@ -42,8 +42,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "concurrently": "^4.1.0",
-    "cross-env": "^5.2.0",
+    "concurrently": "^4.1.2",
+    "cross-env": "^5.2.1",
     "css-loader": "^5.0.1",
     "isomorphic-fetch": "^2.2.1",
     "nodemon": "^1.18.9",
